// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button rendering Renders correctly when not selected 1`] = `
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ Not Selected                                                                                 │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Button rendering Renders correctly when selected 1`] = `
"  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ [47m[30mSelected[39m[49m                                                                                     │
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯"
`;
